<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.droidsoftbd.hhbregistration.MainActivity">
    <item
        android:id="@+id/view_list_menu"
        android:orderInCategory="100"
        android:title="@string/view_list"
        app:showAsAction="never" />
    <item
        android:id="@+id/rating_app_menu"
        android:orderInCategory="100"
        android:title="@string/rating_app"
        app:showAsAction="never" />

    <item
        android:id="@+id/share_menu_menu"
        android:orderInCategory="100"
        android:title="@string/share"
        app:showAsAction="never" />

    <item
        android:id="@+id/about_menu"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="never" />

    <item
        android:id="@+id/sync_menu"
        android:orderInCategory="100"
        android:title="@string/sync"
        app:showAsAction="never" />
</menu>
